--- a/src/main/java/org/ednovo/gooru/client/mvp/analytics/collectionSummaryTeacher/collectionSummaryTeacher.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/analytics/collectionSummaryTeacher/collectionSummaryTeacher.css
@@ -71,7 +71,6 @@
 	width: 15px;
 	height: 15px;
 	background: #BCD1B9;
-	margin: 3px;
 }
 
 .correct_legend_other {
@@ -79,7 +78,6 @@
 	width: 15px;
 	height: 15px;
 	background: #fac6c4;
-	margin: 3px;
 }
 
 .incorrect_legend {
@@ -87,9 +85,11 @@
 	width: 15px;
 	height: 15px;
 	background: #A7A9AC;
-	margin: 3px;
 }
-
+.correct_incorrect_text{
+	padding-left: 6px;
+	padding-right: 6px;
+}
 .floatLeft {
 	float: left;
 }
